@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.1-23
-Date: 2018-12-19
+Date: 2018-12-20
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
