@@ -49,6 +49,7 @@ asplot                  Regional association plot
 ESplot                  Effect-size plot
 circos.cnvplot          circos plot of CNVs
 circos.cis.vs.trans.plot circos plot of cis/trans classification
+circos.mhtplot          circos Manhattan plot with gene annotation
 cnvplot                 genomewide plot of CNVs
 mhtplot                 Manhattan plot
 mhtplot2                Manhattan plot with annotations
