@@ -79,6 +79,7 @@ asplot            \tab      Regional association plot\cr
 ESplot            \tab      Effect-size plot\cr
 circos.cis.vs.trans.plot \tab circos plot of cis/trans classification\cr
 circos.cnvplot    \tab      circos plot of CNVs\cr
+circos.mhtplot 	  \tab      circos Manhattan plot with gene annotation\cr
 cnvplot           \tab      genomewide plot of CNVs\cr
 mhtplot           \tab      Manhattan plot\cr
 mhtplot2          \tab      Manhattan plot with annotations\cr
