@@ -108,6 +108,7 @@ asplot            &      Regional association plot\\
 ESplot            &      Effect-size plot\\
 circos.cis.vs.trans.plot & circos plot of cis/trans classificaiton\\
 circos.cnvplot    &      circos plot of CNVs\\
+circos.mhtplot 	  &      circos Manhattan plot with gene annotation\\
 cnvplot           &      genomewide plot of CNVs\\
 mhtplot           &      Manhattan plot\\
 mhtplot2          &      Manhattan plot with annotations\\
@@ -506,6 +507,18 @@ All these look familiar, so revised form of the function called {\bf mhtplot2} w
 created for additional features such as centering the chromosome ticks, allowing for 
 more sophisticated coloring schemes, using prespecified fonts, etc. Please refer to
 the function's documentation example.
+
+We could also go further with a circos Manhattan plot,
+
+<<echo=TRUE,eval=FALSE>>=
+library(gap)
+library(gap.datasets)
+png("figures/circos.mhtplot.png")
+circos.mhtplot()
+dev.off()
+@
+
+\includegraphics[height=14cm,width=14cm]{figures/circos.mhtplot.png}
 
 The code below obtains a regional association plot with the {\em asplot} function,
 <<echo=TRUE,eval=FALSE>>=
